# learning_opengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  blinkingtri  camera  cameraWithInput  cameraWithMotion  cmake_install.cmake  colorfultri  compile_commands.json  drawrec  going3d  texturedRec  transformRec
.cache/clangd/index/: Hello.cpp.DF0E1E557E54B1A0.idx  Hello.h.1B9575AF2FE686DC.idx  _fixes.hpp.E612EAD65C402AE1.idx  _vectorize.hpp.6369380386AC1FA6.idx  blinkingtri.cpp.484FC93097463DFD.idx  blinkingtri.cpp.D23EA419FBDA7AC3.idx  colorfultri.cpp.1AC2FFAADA4E8C01.idx  colorfultri.cpp.D22E3D4333814431.idx  common.hpp.0BD0EF3D435E8977.idx  compute_common.hpp.E970345646221141.idx  compute_vector_relational.hpp.1A714EBA8552DB48.idx  constants.hpp.80194DA2584A6565.idx  constants.inl.4A9534D585C01B46.idx  drawrec.cpp.B0BD3243EAB8EFE8.idx  epsilon.hpp.4F8C93572F28773F.idx  epsilon.inl.DA7ADA514774C6DE.idx  exponential.hpp.6A59B0E4CD916FF9.idx  func_common.inl.14C1066D89B6E87D.idx  func_exponential.inl.B832F4AFAE25DBD8.idx  func_geometric.inl.113DDCB89F82610D.idx  func_integer.inl.977C5F0353590866.idx  func_matrix.inl.1EFF11FABE9C2C97.idx  (+182 more)
include/: camera.h  objectdrawer.h  shader.h
include/glad/: glad.h
shaders/: blinking.frag  default.frag  default.vert  fragment.frag  going3d.vert  texture.frag  texture.vert  transformRec.vert  vertex.vert
src/sources/: blinkingtri.cpp  cameraWithInput.cpp  cameraWithMotion.cpp  colorfultri.cpp  drawrec.cpp  going3d.cpp  texturedRec.cpp  transformRec.cpp  transfromRec.cpp
src/tools/: camera.cpp  objectdrawer.cpp  shader.cpp
(+1 files in other folders)
